--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-        font-family: "Jua", sans-serif;
+        font-family: "Jua";
         font-weight: 400;
         font-style: normal;
         margin: 0;
